fixed margin of flip card on mobile

--- a/src/styles/scss/_flip.scss
+++ b/src/styles/scss/_flip.scss
@@ -35,6 +35,7 @@
 .flip-card-front {
     @include breakpoint(mobile) {
         padding: 1rem;
+        margin: 1rem auto;
     }
 }
 
